# qdbp

./: .clang-format  .gitattributes  .gitignore  .ocamlformat  LICENSE.md  README.md  dune-project  qdbp.opam
doc/: DEMO.md  FEATURES.md  LIMITATIONS.md  demo.md  grammar.md  influences.md  limitations.md  rationale.md  why_qdbp.md
lib/: AstCreate.ml  README.md  anf.ml  ast.ml  astTypes.ml  ast_utils.ml  codegenC.ml  codegenML.ml  codegen_ml.ml  collectMethods.ml  driver.ml  dune  error.ml  freeVariables.ml  freeVariablesAndDCE.ml  freeVariablesStr.ml  infer.ml  infer2.ml  inferUtils.ml  inline.ml  letBoundVariables.ml  lexer.mll  lower.ml  name_resolver.ml  namesToInts.ml  parser.mly  parserDriver.ml  refcount.ml  resolveImports.ml  resolveShadows.ml  resolve_imports.ml  runtime.ml  tag_ast.ml  test.lisp  type.ml  type2.ml  type_inference.ml  types.ml  varNamesToInts.ml
runtime/: basic_fns.h  qdbp_runtime.h  runtime.h  uthash.h
samples/: abort.qdbp  add_fn.qdbp  bench.qdbp  bool_and_operator.qdbp  bst.qdbp  bst2.qdbp  chained_prints.qdbp  class.qdbp  cmdline.qdbp  defer.qdbp  derive.qdbp  error_propogating.qdbp  error_returning.qdbp  extension.qdbp  float.qdbp  for_loop.qdbp  formula_dsl.qdbp  generic_print_fn.qdbp  if.qdbp  ifthenelse_bool_object.qdbp  ifthenelse_fn.qdbp  import.qdbp  infinite_list.qdbp  infinite_while_loop.qdbp  int.qdbp  list.qdbp  math.qdbp  option.qdbp  peano.qdbp  phantom_field.qdbp  sound_dsl.qdbp  stack.qdbp  strcat.qdbp  string.qdbp  switch.qdbp  test.qdbp  test2.qdbp  tutorial.qdbp
test/: dune  qdbp.ml  test_inference.py
vim/: qdbp.vim
(+34 files in other folders)
